# IN-SMART

./: .env.example  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py  models.py  pyproject.toml
api/eval/: __init__.py  eval_generation.py  eval_retrieval.py
api/processing/: __init__.py  audio.py  text.py
api/services/: __init__.py  chunking.py  embeddings.py  ingestion.py  llm.py  retrieval.py
api/storage/: __init__.py  file_store.py  vector_store.py
api/tests/: test_api.py  test_audio.py  test_processing.py  test_service.py  test_storage.py
api/tests/test_text/: README.md  benev_extracted.txt  test_text_processor.py
client/: __init__.py  chat_page.py  main.py  pyproject.toml  upload_page.py
docker/: API_Dockerfile  Client_Dockerfile
